[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Key.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main/Files/Panorama1.jpg" type="Texture" id=4]
[ext_resource path="res://3D Models/Tree.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Main/Palette.material" type="Material" id=6]
[ext_resource path="res://3D Models/TallTree.obj" type="ArrayMesh" id=7]
[ext_resource path="res://3D Models/PineTree.obj" type="ArrayMesh" id=8]
[ext_resource path="res://3D Models/Stone.obj" type="ArrayMesh" id=9]
[ext_resource path="res://3D Models/BushRed.obj" type="ArrayMesh" id=10]
[ext_resource path="res://Main/Geologica.tres" type="DynamicFont" id=11]
[ext_resource path="res://Main/ButtonHover.tres" type="StyleBox" id=12]
[ext_resource path="res://Main/ButtonPressed.tres" type="StyleBox" id=13]
[ext_resource path="res://Main/ButtonNormal.tres" type="StyleBox" id=14]
[ext_resource path="res://Main/Files/ProductSans.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Main/Files/Cross.png" type="Texture" id=16]
[ext_resource path="res://Sounds/Open_sound.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sounds/MenuMusic.tscn" type="PackedScene" id=18]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 4 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_orientation = Basis( 0.893206, 0, -0.449647, 0, 1, 0, 0.449647, 0, 0.893206 )
fog_enabled = true

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.137255, 1, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.807843, 0.290196, 0.290196, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.505882, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 15 )

[node name="Menu_test" type="Node"]
script = ExtResource( 1 )

[node name="Transition" parent="." instance=ExtResource( 2 )]

[node name="3DNode" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.141155, 0 )

[node name="Key" parent="3DNode" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.022, 0.8, 0 )

[node name="Camera" type="Camera" parent="3DNode"]
transform = Transform( -3.71874e-08, 0.288657, -0.957433, 1.33331e-08, 0.957433, 0.288657, 1, -2.03113e-09, -3.94531e-08, 0.992921, 1.35946, -0.107492 )
h_offset = -0.2
current = true

[node name="Sky" type="WorldEnvironment" parent="3DNode"]
environment = SubResource( 2 )

[node name="BackGround" type="Spatial" parent="3DNode"]

[node name="Ground" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( 95, 0, 0, 0, 0, 0, 0, 0, 110, 0, -0.112763, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Tree" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3.95204, -0.151037, 0.0103445 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 6 )

[node name="TallTree" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( 0.49535, 0.0680307, 0, -0.0680307, 0.49535, 0, 0, 0, 0.5, 2.93374, -0.198791, -1.63521 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 6 )

[node name="TallTree2" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( -2.18458e-08, 0.00420392, -0.499982, 1.18127e-09, 0.499982, 0.00420392, 0.5, -9.97549e-10, -2.18549e-08, 4.75892, -0.198791, 1.53767 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 6 )

[node name="PineTree" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( -2.18457e-08, 0.00423245, -0.499982, 1.18251e-09, 0.499982, 0.00423245, 0.5, -9.97549e-10, -2.18549e-08, 3.25825, -0.217831, 2.05572 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="Stone" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.16892, -0.432725, -1.08108 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 6 )

[node name="Stone2" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.89626, -0.432725, -2.015 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 6 )

[node name="BushRed" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( 0.322222, 0.110361, -0.366051, 6.66654e-09, 0.478716, 0.144328, 0.382326, -0.0930115, 0.308506, 5.42561, -0.345558, 0.822549 )
mesh = ExtResource( 10 )
material/0 = ExtResource( 6 )

[node name="BushRed2" type="MeshInstance" parent="3DNode/BackGround"]
transform = Transform( 0.17065, 0.135662, -0.449972, 6.66654e-09, 0.478716, 0.144328, 0.469977, -0.0492591, 0.163386, 6.13373, -0.345558, -0.962044 )
mesh = ExtResource( 10 )
material/0 = ExtResource( 6 )

[node name="2DNode" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LeftSide" type="MarginContainer" parent="2DNode"]
margin_right = 993.0
margin_bottom = 1080.0
size_flags_horizontal = 2
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_top = 55
custom_constants/margin_left = 110
custom_constants/margin_bottom = 80

[node name="VBox" type="VBoxContainer" parent="2DNode/LeftSide"]
margin_left = 110.0
margin_top = 55.0
margin_right = 693.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 145
alignment = 1

[node name="GameName" type="MarginContainer" parent="2DNode/LeftSide/VBox"]
margin_right = 583.0
margin_bottom = 245.0
custom_constants/margin_bottom = -250

[node name="Name" type="Label" parent="2DNode/LeftSide/VBox/GameName"]
margin_right = 583.0
margin_bottom = 495.0
custom_colors/font_color = Color( 1, 1, 0.843137, 1 )
custom_constants/line_spacing = -36
custom_fonts/font = ExtResource( 11 )
text = "Finding Key
"
autowrap = true

[node name="Buttons" type="VBoxContainer" parent="2DNode/LeftSide/VBox"]
margin_top = 390.0
margin_right = 583.0
margin_bottom = 945.0
rect_min_size = Vector2( 583, 541 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35

[node name="Start" type="Button" parent="2DNode/LeftSide/VBox/Buttons"]
margin_right = 583.0
margin_bottom = 112.0
focus_neighbour_bottom = NodePath("../Continue")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0.443137, 0.858824, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.960784, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 1, 0.756863, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/normal = ExtResource( 14 )
text = "id_play"

[node name="Continue" type="Button" parent="2DNode/LeftSide/VBox/Buttons"]
margin_top = 147.0
margin_right = 583.0
margin_bottom = 260.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_right = NodePath("../About")
focus_neighbour_bottom = NodePath("../Settings")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0.443137, 0.858824, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.960784, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 1, 0.756863, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/normal = ExtResource( 14 )
text = "id_continue"

[node name="Settings" type="Button" parent="2DNode/LeftSide/VBox/Buttons"]
margin_top = 295.0
margin_right = 583.0
margin_bottom = 407.0
focus_neighbour_top = NodePath("../Continue")
focus_neighbour_bottom = NodePath("../About")
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0.443137, 0.858824, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.960784, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 1, 0.756863, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/normal = ExtResource( 14 )
text = "id_settings"

[node name="About" type="Button" parent="2DNode/LeftSide/VBox/Buttons"]
margin_top = 442.0
margin_right = 583.0
margin_bottom = 555.0
focus_neighbour_top = NodePath("../Settings")
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0.443137, 0.858824, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.960784, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 1, 0.756863, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/normal = ExtResource( 14 )
text = "id_about"

[node name="RightSide" type="MarginContainer" parent="2DNode"]
margin_left = 1733.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 35
custom_constants/margin_top = 35
custom_constants/margin_left = 32
custom_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="2DNode/RightSide"]
margin_left = 32.0
margin_top = 35.0
margin_right = 152.0
margin_bottom = 1045.0

[node name="Quit" type="Button" parent="2DNode/RightSide/VBoxContainer"]
margin_right = 120.0
margin_bottom = 120.0
focus_mode = 0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = ExtResource( 14 )
icon = ExtResource( 16 )
align = 0

[node name="Version" type="Label" parent="2DNode/RightSide/VBoxContainer"]
margin_top = 124.0
margin_right = 120.0
margin_bottom = 1010.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Ver 1.2"
valign = 2

[node name="Open_sound" parent="." instance=ExtResource( 17 )]

[node name="MenuMusic" parent="." instance=ExtResource( 18 )]

[connection signal="pressed" from="2DNode/LeftSide/VBox/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="2DNode/LeftSide/VBox/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="2DNode/LeftSide/VBox/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="2DNode/LeftSide/VBox/Buttons/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="2DNode/RightSide/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
